# event_flow

./: .gitignore  Cargo.toml  README.md  pyproject.toml
core/: Cargo.toml
core/src/: app.rs  event.rs  lib.rs  prelude.rs
example/: Cargo.toml  README.md  Settings.toml  background_tasks.py  basic_event_handling.py  batch_processing.py  lifecycle_hooks.py  multi_app.py  schedule_tasks.py  timer_tasks.py
example/src/: main.rs
example/src/app/: event.rs  kline_publisher.rs  market_maker_app.rs  mod.rs  price_consumer.rs  price_feed_app.rs  settings.rs
example/src/app/price_feed/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
mark_event/: Cargo.toml
mark_event/src/: lib.rs
src/: lib.rs  prelude.rs
src/event_flow/: settings.py
src/event_flow/core/: __init__.py  application.py  decorators.py  event.py  exception.py  tools.py
