[project]
name = "event-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "york", email = "york@pineal.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
]

[project.scripts]
event-flow = "event_flow:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
